--- a/SimpleNotes/Storuboards/Base.lproj/LaunchScreen.storyboard
+++ b/SimpleNotes/Storuboards/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,8 +15,30 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="note.text" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vA6-y2-A46">
+                                <rect key="frame" x="107" y="349" width="200" height="197.5"/>
+                                <color key="tintColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="05t-1R-K6e"/>
+                                    <constraint firstAttribute="height" constant="200" id="imx-2d-dhe"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SimpleNotes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCe-bb-T5b">
+                                <rect key="frame" x="68" y="165" width="278" height="78"/>
+                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.77000302080000005" green="0.83606344460000004" blue="0.79607295990000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="hCe-bb-T5b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="121" id="Bzd-QM-sVl"/>
+                            <constraint firstItem="vA6-y2-A46" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ga3-Y2-mTG"/>
+                            <constraint firstItem="hCe-bb-T5b" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kT6-RN-5yf"/>
+                            <constraint firstItem="vA6-y2-A46" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lGs-Ch-Cwc"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +46,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="note.text" catalog="system" width="128" height="106"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
