--- a/SimpleNotes/Storyboards/Base.lproj/Main.storyboard
+++ b/SimpleNotes/Storyboards/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Entry View Controller-->
         <scene sceneID="8Fi-m9-w0H">
             <objects>
-                <viewController id="qrf-gL-MRy" customClass="EntryViewController" customModule="MyNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="qrf-gL-MRy" customClass="EntryViewController" customModule="SimpleNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zx5-ue-0mG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -88,7 +88,7 @@
         <!--Developers-->
         <scene sceneID="zCb-he-G3k">
             <objects>
-                <tableViewController storyboardIdentifier="DevelopersVC" title="Developers" id="h8n-uM-K1O" customClass="DevelopersViewController" customModule="MyNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="DevelopersVC" title="Developers" id="h8n-uM-K1O" customClass="DevelopersViewController" customModule="SimpleNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="hF6-wa-OHl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -119,7 +119,7 @@
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellWithAuthors" textLabel="jOB-OA-fnZ" style="IBUITableViewCellStyleDefault" id="qj7-dE-c1P">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cellWithAuthors" textLabel="jOB-OA-fnZ" style="IBUITableViewCellStyleDefault" id="qj7-dE-c1P">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qj7-dE-c1P" id="Llj-PK-8j3">
@@ -152,7 +152,7 @@
         <!--Заметки-->
         <scene sceneID="4gt-EF-qeQ">
             <objects>
-                <tableViewController id="UI9-qW-Vq5" customClass="NotesListTableViewController" customModule="MyNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="UI9-qW-Vq5" customClass="NotesListTableViewController" customModule="SimpleNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="39R-Hz-fLI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -207,7 +207,7 @@
         <!--Notes Details Table View Controller-->
         <scene sceneID="J7F-Qa-5H3">
             <objects>
-                <tableViewController id="AYT-dX-ZdL" customClass="NotesDetailsTableViewController" customModule="MyNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="AYT-dX-ZdL" customClass="NotesDetailsTableViewController" customModule="SimpleNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Npe-Gf-eQJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
